--- a/courses.html
+++ b/courses.html
@@ -8,14 +8,10 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
 
-    <link
-      href="https://fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,500,600,700,800,900"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Fredericka+the+Great"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
+
 
     <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css" />
     <link rel="stylesheet" href="css/animate.css" />
@@ -48,7 +44,7 @@
                   <span class="icon-map"></span>
                 </div>
                 <span class="text"
-                  >Melchor Pérez de Soto #37 y #38 Col. Ampliación Miguel
+                  >Melchor Pérez de Soto 37 y 38 Ampliación Miguel
                   Hidalgo Tlalpan CDMX 14250</span
                 >
               </div>
@@ -66,7 +62,7 @@
                 >
                   <span class="icon-phone2"></span>
                 </div>
-                <span class="text">WhatsApp: 55 3886 2515 Tel: 3089 0707 y 5486 1612 </span>
+                <span class="text">Tel: 3089 0707 y 5446 5725 WhatsApp: 55 3886 2515 </span>
               </div>
             </div>
           </div>
@@ -79,7 +75,7 @@
     >
       <div class="container d-flex align-items-center">
         <a class="navbar-brand" href="index.html"
-          ><img src="images/logoCFB.png" width="55px" /> CFB & Willie</a
+          ><img src="images/logo.png" width="190px"/> Colegio Fuentes Brotantes & Willie</a
         >
         <button
           class="navbar-toggler"
@@ -114,146 +110,228 @@
       </div>
     </nav>
     <!-- END nav -->
+    <a class="whatsapp" href="https://api.whatsapp.com/send?phone=5215538862515" target="_blank">
+      <img src="http://s2.accesoperu.com/logos/btn_whatsapp.png" alt="">
+      </a>
     
     <section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_2.jpg');">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text align-items-center justify-content-center">
           <div class="col-md-9 ftco-animate text-center">
-            <h1 class="mb-2 bread">Our Courses</h1>
-            <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Courses <i class="ion-ios-arrow-forward"></i></span></p>
+            <h1 class="mb-2 bread">Preescolar</h1>
+            <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Inicio</a><i class="ion-ios-arrow-forward"></i></a></span> <span> Preescolar <i class="ion-ios-arrow-forward"></i></span></p>
           </div>
         </div>
       </div>
     </section>
 		
-		<section class="ftco-section">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-6 course d-lg-flex ftco-animate">
-						<div class="img" style="background-image: url(images/course-1.jpg);"></div>
-						<div class="text bg-light p-4">
-							<h3><a href="#">Arts Lesson</a></h3>
-							<p class="subheading"><span>Class time:</span> 9:00am - 10am</p>
-							<p>Separated they live in. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country</p>
-						</div>
-					</div>
-					<div class="col-md-6 course d-lg-flex ftco-animate">
-						<div class="img" style="background-image: url(images/course-2.jpg);"></div>
-						<div class="text bg-light p-4">
-							<h3><a href="#">Language Lesson</a></h3>
-							<p class="subheading"><span>Class time:</span> 9:00am - 10am</p>
-							<p>Separated they live in. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country</p>
-						</div>
-					</div>
-					<div class="col-md-6 course d-lg-flex ftco-animate">
-						<div class="img" style="background-image: url(images/course-3.jpg);"></div>
-						<div class="text bg-light p-4">
-							<h3><a href="#">Music Lesson</a></h3>
-							<p class="subheading"><span>Class time:</span> 9:00am - 10am</p>
-							<p>Separated they live in. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country</p>
-						</div>
-					</div>
-					<div class="col-md-6 course d-lg-flex ftco-animate">
-						<div class="img" style="background-image: url(images/course-4.jpg);"></div>
-						<div class="text bg-light p-4">
-							<h3><a href="#">Sports Lesson</a></h3>
-							<p class="subheading"><span>Class time:</span> 9:00am - 10am</p>
-							<p>Separated they live in. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country</p>
-						</div>
-					</div>
-					<div class="col-md-6 course d-lg-flex ftco-animate">
-						<div class="img" style="background-image: url(images/course-5.jpg);"></div>
-						<div class="text bg-light p-4">
-							<h3><a href="#">Study Lesson</a></h3>
-							<p class="subheading"><span>Class time:</span> 9:00am - 10am</p>
-							<p>Separated they live in. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country</p>
-						</div>
-					</div>
-					<div class="col-md-6 course d-lg-flex ftco-animate">
-						<div class="img" style="background-image: url(images/course-6.jpg);"></div>
-						<div class="text bg-light p-4">
-							<h3><a href="#">Experiment Lesson</a></h3>
-							<p class="subheading"><span>Class time:</span> 9:00am - 10am</p>
-							<p>Separated they live in. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-
-		
-    <footer class="ftco-footer ftco-bg-dark ftco-section">
+    <section class="ftco-section bg-light">
       <div class="container">
-        <div class="row mb-5">
-          <div class="col-md-6 col-lg-3">
-            <div class="ftco-footer-widget mb-5">
-            	<h2 class="ftco-heading-2">Have a Questions?</h2>
-            	<div class="block-23 mb-3">
-	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
-	              </ul>
-	            </div>
+        <div class="row justify-content-center mb-2 pb-1">
+          <div class="col-md-8 text-center heading-section ftco-animate">
+            <h2 class="mb-4"><span>Primera Etapa</span> Educacional</h2>
+             <p class= "historia"> Nuestro trabajo se enfoca en el aprendizaje lúdico y vivencial.</p>
             </div>
           </div>
-          <div class="col-md-6 col-lg-3">
+        </div>
+      </div>
+    </section>
+
+    <section class="home-slider owl-carousel">
+      <div
+        class="slider-item"
+        style="background-image: url(images/jardin1.jpg);"
+      >
+        <div class="overlay"></div>
+        <div class="container">
+          <div
+            class="row no-gutters slider-text align-items-center justify-content-center"
+            data-scrollax-parent="true"
+          >
+          </div>
+        </div>
+      </div>
+
+      <div
+        class="slider-item"
+        style="background-image: url(images/jardin2.jpg);"
+      >
+        <div class="overlay"></div>
+        <div class="container">
+          <div
+            class="row no-gutters slider-text align-items-center justify-content-center"
+            data-scrollax-parent="true"
+          ></div>
+        </div>
+      </div>
+
+      <div
+        class="slider-item"
+        style="background-image: url(images/jardin3.jpg);"
+      >
+        <div class="overlay"></div>
+        <div class="container">
+          <div
+            class="row no-gutters slider-text align-items-center justify-content-center"
+            data-scrollax-parent="true"
+          ></div>
+        </div>
+      </div>
+
+      <div
+        class="slider-item"
+        style="background-image: url(images/jardin4.png);"
+      >
+        <div class="overlay"></div>
+        <div class="container">
+          <div
+            class="row no-gutters slider-text align-items-center justify-content-center"
+            data-scrollax-parent="true"
+          >
+          </div>
+        </div>
+      </div>
+
+      <div
+        class="slider-item"
+        style="background-image: url(images/jardin5.png);"
+      >
+        <div class="overlay"></div>
+        <div class="container">
+          <div
+            class="row no-gutters slider-text align-items-center justify-content-center"
+            data-scrollax-parent="true"
+          ></div>
+        </div>
+      </div>
+
+      <div
+      class="slider-item"
+      style="background-image: url(images/jardin6.jpg);"
+    >
+      <div class="overlay"></div>
+      <div class="container">
+        <div
+          class="row no-gutters slider-text align-items-center justify-content-center"
+          data-scrollax-parent="true"
+        ></div>
+      </div>
+    </div>
+
+    <div
+    class="slider-item"
+    style="background-image: url(images/jardin8.png);"
+  >
+    <div class="overlay"></div>
+    <div class="container">
+      <div
+        class="row no-gutters slider-text align-items-center justify-content-center"
+        data-scrollax-parent="true"
+      ></div>
+    </div>
+  </div>
+
+  <div
+    class="slider-item"
+    style="background-image: url(images/jardin7.png);"
+  >
+    <div class="overlay"></div>
+    <div class="container">
+      <div
+        class="row no-gutters slider-text align-items-center justify-content-center"
+        data-scrollax-parent="true"
+      ></div>
+    </div>
+  </div>
+  <div
+  class="slider-item"
+  style="background-image: url(images/jardin8.JPG);"
+>
+  <div class="overlay"></div>
+  <div class="container">
+    <div
+      class="row no-gutters slider-text align-items-center justify-content-center"
+      data-scrollax-parent="true"
+    ></div>
+  </div>
+</div>
+    </section>
+
+		<section class="ftco-section ftco-counter img" id="section-counter" style="background-image: url(images/bg_4.jpg);" data-stellar-background-ratio="0.5">
+    	<div class="container">
+    		<div class="row justify-content-center mb-5 pb-2">
+          <div class="col-md-8 text-center heading-section heading-section-black ftco-animate">
+            <h2 class="mb-4"><span>Alumno</span> actualmente inscrito en la escuela:</h2>
+            <p class= "historia">Puedes mandar un email a <strong>willieavisos@gmail.com</strong> </p>
+          </div>
+        </div>	
+    	
+    </section>
+
+		<section class="ftco-gallery">
+    	<div class="container-wrap">
+    		<div class="row no-gutters">
+					<div class="col-md-3 ftco-animate">
+						<a href="images/pre1.png" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/pre1.png);">
+							<div class="icon mb-4 d-flex align-items-center justify-content-center">
+    						<span class="icon-instagram"></span>
+    					</div>
+						</a>
+					</div>
+					<div class="col-md-3 ftco-animate">
+						<a href="images/pre2.JPG" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/pre2.JPG);">
+							<div class="icon mb-4 d-flex align-items-center justify-content-center">
+    						<span class="icon-instagram"></span>
+    					</div>
+						</a>
+					</div>
+					<div class="col-md-3 ftco-animate">
+						<a href="images/pre3.png" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/pre3.png);">
+							<div class="icon mb-4 d-flex align-items-center justify-content-center">
+    						<span class="icon-instagram"></span>
+    					</div>
+						</a>
+					</div>
+					<div class="col-md-3 ftco-animate">
+						<a href="images/pre4.png" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/pre4.png);">
+							<div class="icon mb-4 d-flex align-items-center justify-content-center">
+    						<span class="icon-instagram"></span>
+    					</div>
+						</a>
+					</div>
+        </div>
+    	</div>
+    </section>
+
+<footer class="ftco-footer ftco-bg-dark ftco-section">
+      <div class="container">
+        <div class="col mb-12 text-center">
             <div class="ftco-footer-widget mb-5">
-              <h2 class="ftco-heading-2">Recent Blog</h2>
-              <div class="block-21 mb-4 d-flex">
-                <a class="blog-img mr-4" style="background-image: url(images/image_1.jpg);"></a>
-                <div class="text">
-                  <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
-                  <div class="meta">
-                    <div><a href="#"><span class="icon-calendar"></span> Dec 25, 2018</a></div>
-                    <div><a href="#"><span class="icon-person"></span> Admin</a></div>
-                    <div><a href="#"><span class="icon-chat"></span> 19</a></div>
-                  </div>
-                </div>
+              <h2 class="ftco-heading-2">¿Dudas?</h2>
+              <div class="block-23 mb-3">
+                <ul>
+                  <li>
+                    <span class="icon icon-map-marker"></span
+                    ><span class="text"
+                      >Melchor Pérez de Soto 37 y 38 Ampliación Miguel
+                      Hidalgo Tlalpan CDMX 14250</span
+                    >
+                  </li>
+                  <li>
+                    <a href="#"
+                      ><span class="icon icon-phone"></span
+                      ><span class="text">Tel: 3089 0707 y 5446 5725 WhatsApp: 55 3886 2515</span></a
+                    >
+                  </li>
+                  <li>
+                    <a href="#"
+                      ><span class="icon icon-envelope"></span
+                      ><span class="text">informes.cfb.willie@gmail.com, cfbavisos@gmail.com & willieavisos@gmail.com</span></a
+                    >
+                  </li>
+                </ul>
               </div>
-              <div class="block-21 mb-5 d-flex">
-                <a class="blog-img mr-4" style="background-image: url(images/image_2.jpg);"></a>
-                <div class="text">
-                  <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
-                  <div class="meta">
-                    <div><a href="#"><span class="icon-calendar"></span> Dec 25, 2018</a></div>
-                    <div><a href="#"><span class="icon-person"></span> Admin</a></div>
-                    <div><a href="#"><span class="icon-chat"></span> 19</a></div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3">
-            <div class="ftco-footer-widget mb-5 ml-md-4">
-              <h2 class="ftco-heading-2">Links</h2>
-              <ul class="list-unstyled">
-                <li><a href="#"><span class="ion-ios-arrow-round-forward mr-2"></span>Home</a></li>
-                <li><a href="#"><span class="ion-ios-arrow-round-forward mr-2"></span>About</a></li>
-                <li><a href="#"><span class="ion-ios-arrow-round-forward mr-2"></span>Services</a></li>
-                <li><a href="#"><span class="ion-ios-arrow-round-forward mr-2"></span>Deparments</a></li>
-                <li><a href="#"><span class="ion-ios-arrow-round-forward mr-2"></span>Contact</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3">
-            <div class="ftco-footer-widget mb-5">
-            	<h2 class="ftco-heading-2">Subscribe Us!</h2>
-              <form action="#" class="subscribe-form">
-                <div class="form-group">
-                  <input type="text" class="form-control mb-2 text-center" placeholder="Enter email address">
-                  <input type="submit" value="Subscribe" class="form-control submit px-3">
-                </div>
-              </form>
-            </div>
-            <div class="ftco-footer-widget mb-5">
-            	<h2 class="ftco-heading-2 mb-0">Connect With Us</h2>
-            	<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-3">
-                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
-              </ul>
             </div>
           </div>
         </div>
