--- a/index.html
+++ b/index.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Colegio Fuentes Brotantes y Kinder Willie</title>
+    <title>Colegio Fuentes Brotantes y Jardín de Niños Willie</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
 
-    <link
-      href="https://fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,500,600,700,800,900"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Fredericka+the+Great"
-      rel="stylesheet"
-    />
+
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css" />
     <link rel="stylesheet" href="css/animate.css" />
@@ -81,7 +77,7 @@
     >
       <div class="container d-flex align-items-center">
         <a class="navbar-brand" href="index.html"
-          ><img src="images/logoCFB.png" width="75px" /> CFB & Willie</a
+          ><img src="images/logo.png" width="190px"/> Colegio Fuentes Brotantes & Willie</a
         >
         <button
           class="navbar-toggler"
@@ -116,6 +112,10 @@
       </div>
     </nav>
     <!-- END nav -->
+
+    <a class="whatsapp" href="https://api.whatsapp.com/send?phone=5215538862515" target="_blank">
+      <img src="http://s2.accesoperu.com/logos/btn_whatsapp.png" alt="">
+      </a>
 
    <!-- Main menu photos -->
     <section class="home-slider owl-carousel">
@@ -509,15 +509,27 @@
         </div>
         <div class="container">
         <div class="row">
-                <div class="col-md-6 wrap-about py-5 pr-md-4 ftco-animate"></div>
-                  <div class="img" style="background-image: url(images/anglo.jpg);"></div>
-                  <div class="text bg-light p-4">
-                    <h3><a href="https://theanglo.mx/cambridge-english/flyers-certificate/"target="_blank">Partnership with the Anglo</a></h3>
-                    <p class="subheading"> Desde el 2011, el colegio ofrece certificación de FLYERS.</p>
-                  </div>
+          <div class="col-md-6 ftco-animate order-md-last wrap-about py-5 wrap-about bg-light">
+            <a
+              href="images/anglo.jpg"
+              class="gallery image-popup img d-flex align-items-center"
+              style="background-image: url(images/anglo.jpg);"
+            >
+              <div
+                class="icon mb-4 d-flex align-items-center justify-content-center"
+              >
+                <span class="icon-instagram"></span>
+              </div>
+            </a>
+            <div class="text bg-light p-4">
+              <h3><a href="https://theanglo.mx/cambridge-english/flyers-certificate/"target="_blank">Partnership with the Anglo</a></h3>
+              <p class="subheading"> Desde el 2011, el colegio ofrece certificación de FLYERS.</p>
+            </div>
+          </div>
+   
           
               <div
-                class="col-md-5 order-md-last wrap-about py-5 wrap-about bg-light"
+                class="col-md-6 order-md-last wrap-about py-5 wrap-about bg-light"
               >
                 <div class="text px-4 ftco-animate">
                   <div
@@ -528,51 +540,65 @@
                     <div class="carousel-inner">
                       <div class="carousel-item active">
                         <img
-                          src="images/olimp2016.jpg"
+                          src="images/ingles1.jpeg"
                           class="d-block w-100"
-                          alt="dragon"
+                          alt="english1"
                         />
                       </div>
                       <div class="carousel-item">
                         <img
-                          src="images/olim2015.jpg"
+                          src="images/ingles2.jpeg"
                           class="d-block w-100"
-                          alt="independence"
+                          alt="english2"
                         />
                       </div>
                       <div class="carousel-item">
                         <img
-                          src="images/olim2013.jpg"
+                          src="images/ingles3.JPG"
                           class="d-block w-100"
-                          alt="halloween"
+                          alt="english3"
                         />
                       </div>
                       <div class="carousel-item">
                         <img
-                          src="images/olim2011.jpg"
+                          src="images/ingles4.JPG"
                           class="d-block w-100"
-                          alt="lancelot"
+                          alt="english4"
                         />
                       </div>
                       <div class="carousel-item">
                         <img
-                          src="images/olim2016.jpg"
+                          src="images/ingles5.JPG"
                           class="d-block w-100"
-                          alt="prince"
+                          alt="english5"
                         />
                       </div>
                       <div class="carousel-item">
                         <img
-                          src="images/olimp2011.jpg"
+                          src="images/ingles6.JPG"
                           class="d-block w-100"
-                          alt="rabbit"
+                          alt="english6"
                         />
                       </div>
                       <div class="carousel-item">
                         <img
-                          src="images/benito2012.jpg"
+                          src="images/ingles7.JPG"
                           class="d-block w-100"
-                          alt="valentine"
+                          alt="english7"
+                        />
+                      </div>
+                      <div class="carousel-item">
+                        <img
+                          src="images/ingles8.JPG"
+                          class="d-block w-100"
+                          alt="english8"
+                        />
+                      </div>
+                      <div class="carousel-item">
+                        <img
+                          src="images/ingles9.jpeg"
+                          class="d-block w-100"
+                          alt="english9"
                         />
                       </div>
                     </div>
@@ -648,6 +674,41 @@
                       src="images/benito2012.jpg"
                       class="d-block w-100"
                       alt="diploma7"
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      src="images/diploma8.jpeg"
+                      class="d-block w-100"
+                      alt="diploma8"
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      src="images/diploma9.jpeg"
+                      class="d-block w-100"
+                      alt="diploma9"
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      src="images/diploma10.jpeg"
+                      class="d-block w-100"
+                      alt="diploma10"
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      src="images/diploma11.jpeg"
+                      class="d-block w-100"
+                      alt="diploma11"
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      src="images/diploma12.jpeg"
+                      class="d-block w-100"
+                      alt="diploma12"
                     />
                   </div>
                 </div>
@@ -749,9 +810,9 @@
         <div class="row no-gutters">
           <div class="col-md-3 ftco-animate">
             <a
-              href="images/image_1.jpg"
+              href="images/lower1.png"
               class="gallery image-popup img d-flex align-items-center"
-              style="background-image: url(images/course-1.jpg);"
+              style="background-image: url(images/lower1.png);"
             >
               <div
                 class="icon mb-4 d-flex align-items-center justify-content-center"
@@ -762,9 +823,9 @@
           </div>
           <div class="col-md-3 ftco-animate">
             <a
-              href="images/image_2.jpg"
+              href="images/lower3.png"
               class="gallery image-popup img d-flex align-items-center"
-              style="background-image: url(images/image_2.jpg);"
+              style="background-image: url(images/lower3.png);"
             >
               <div
                 class="icon mb-4 d-flex align-items-center justify-content-center"
@@ -775,9 +836,9 @@
           </div>
           <div class="col-md-3 ftco-animate">
             <a
-              href="images/image_3.jpg"
+              href="images/lower2.png"
               class="gallery image-popup img d-flex align-items-center"
-              style="background-image: url(images/image_3.jpg);"
+              style="background-image: url(images/lower2.png);"
             >
               <div
                 class="icon mb-4 d-flex align-items-center justify-content-center"
@@ -788,9 +849,9 @@
           </div>
           <div class="col-md-3 ftco-animate">
             <a
-              href="images/image_4.jpg"
+              href="images/lower4.png"
               class="gallery image-popup img d-flex align-items-center"
-              style="background-image: url(images/image_4.jpg);"
+              style="background-image: url(images/lower4.png);"
             >
               <div
                 class="icon mb-4 d-flex align-items-center justify-content-center"
@@ -876,7 +937,6 @@
         />
       </svg>
     </div>
-
     <script src="js/jquery.min.js"></script>
     <script src="js/jquery-migrate-3.0.1.min.js"></script>
     <script src="js/popper.min.js"></script>
@@ -892,5 +952,6 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
     <script src="js/google-map.js"></script>
     <script src="js/main.js"></script>
+   
   </body>
 </html>
